minor changes to swagger documentation
