# docs/swagger.json
@@ -28,33 +28,7 @@
                 "tags": [
                     "admin"
                 ],
-                "summary": "CreateAdmin endpoint is used by the admin role user to create a new admin or supervisor account.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "email",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "firstname",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "lastname",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    }
-                ]
+                "summary": "CreateAdmin endpoint is used by the admin role user to create a new admin or supervisor account."
             }
         },
         "/api/v1/auth/supervisor/create": {
@@ -69,33 +43,7 @@
                 "tags": [
                     "supervisor"
                 ],
-                "summary": "CreateSupervisor endpoint is used by the admin role user to create a new admin or supervisor account.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "email",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "firstname",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "lastname",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    }
-                ]
+                "summary": "CreateSupervisor endpoint is used by the admin role user to create a new admin or supervisor account."
             }
         },
         "/api/v1/login": {
@@ -110,21 +58,7 @@
                 "tags": [
                     "auth"
                 ],
-                "summary": "Login endpoint is used by the user to login.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "email",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "name": "password",
-                        "in": "formData",
-                        "required": true
-                    }
-                ]
+                "summary": "Login endpoint is used by the user to login."
             }
         }
     }
